--- a/1601141019/2/index.html
+++ b/1601141019/2/index.html
@@ -94,9 +94,9 @@
     <aside>
     	<h3>读者评论</h3>
         <p contenteditable="true">可以添加评论</p><br/>
-        《致橡树》<progress value="8" max="15" ><progress/><br/>
-        《再别康桥》<progress value="5" max="15" ><progress/><br/>
-        《无怨的青春》<progress value="2" max="15" ><progress/><br/>
+        《致橡树》<progress value="8" max="15" ></progress><br/>
+        《再别康桥》<progress value="5" max="15" ></progress><br/>
+        《无怨的青春》<progress value="2" max="15" ></progress><br/>
     </aside>
     <footer style="text-align:center"><hr/>版权&copy;归属于黄河科技学院16物联网<br/>地址：河南省郑州市紫荆山南路666号</footer>
 </body>
