--- a/1601141019/2/20181017-3.html
+++ b/1601141019/2/20181017-3.html
@@ -8,18 +8,25 @@
 <body>
 	<h1 align="center">电影影评网</h1>
     <img style="display:block;width:100%;" src="images/44.jpg"/><br>
-    <div style="width:80%;margin-left:20%;"> 
-        <img width="16%" src="images/nav1.jpg"/>
-        <img width="16%" src="images/nav1.jpg"/>
-        <img width="16%" src="images/nav1.jpg"/>
-        <img width="16%" src="images/nav1.jpg"/>
-        <img width="16%" src="images/nav1.jpg"/>
-    </div>
+    <nav  align="center" style="cursor:pointer">
+    	<marquee direction="right"  scrollamount="20" onMouseOver="this.stop()" onMouseOut="this.start()" behavior="alternate" scrolldelay="" width="50%"> 
+        	<img width="16%" src="images/nav1.jpg"/>
+        	<img width="16%" src="images/nav2.jpg"/>
+        	<img width="16%" src="images/nav3.jpg"/>
+        	<img width="16%" src="images/nav4.jpg"/>
+        	<img width="16%" src="images/nav5.jpg"/>
+        	<img width="16%" src="images/nav1.jpg"/>
+        	<img width="16%" src="images/nav2.jpg"/>
+        	<img width="16%" src="images/nav3.jpg"/>
+        	<img width="16%" src="images/nav4.jpg"/>
+        	<img width="16%" src="images/nav5.jpg"/>
+       	</marquee>
+    </nav>
     <details>
     	<summary><img src="images/111.png"></summary>
         <ul>
             <li>《敢死队》<br/>
-			<p>今天看了全天唯一一场原声的《敢死队》。有好事者统计，这群肌肉大叔的年龄加起来是439岁，平均年龄超过了50岁，其中岁数最大的史泰龙64岁，岁数最小的杰森•斯坦森也有38岁，堪称老男人团。一帮纯爷们拍出的电影，当然是没有什么剧情，从头劲爆到尾。</p>
+			<p>今天看了全天唯一一场原声的<mark>《敢死队》</mark>。有好事者统计，这群肌肉大叔的年龄加起来是439岁，平均年龄超过了50岁，其中岁数最大的<mark>史泰龙</mark>64岁，岁数最小的<mark>杰森•斯坦森</mark>也有38岁，堪称老男人团。一帮纯爷们拍出的电影，当然是没有什么剧情，从头劲爆到尾。</p>
             </li>			
             <li><img src="images/444.jpg"/></li>
 			<li>大众评分：<meter value="6" min="0" max="10" low="6" high="10" title="6分" optimum="10"></meter><br></li>
@@ -28,7 +35,7 @@
         </ul><hr/>
         <ul>
             <li>《赤焰战场》<br/>
-			<p>这部电影的最大意义在于一群廉颇老矣的明星向观众做了一个集体性的道别。他们以后或许还会各自为战地奋斗在荧屏之上，但如此集中的出现在一部电影中就显得几乎不再可能。布鲁斯•威利斯已经56岁，海伦•米伦66岁，约翰•马尔科维奇58岁，摩根•弗里曼已经74岁，布莱恩•考克斯65岁。这些年纪已经超过或者年近花甲的曾经叱咤荧屏的人物正在渐渐地逝去，如同那一抹灿丽的......情，从头劲爆到尾。</p>
+			<p>这部电影的最大意义在于一群廉颇老矣的明星向观众做了一个集体性的道别。他们以后或许还会各自为战地奋斗在荧屏之上，但如此集中的出现在一部电影中就显得几乎不再可能。<mark>布鲁斯•威利斯</mark>已经56岁，海伦•米伦66岁，约翰•马尔科维奇58岁，摩根•弗里曼已经74岁，布莱恩•考克斯65岁。这些年纪已经超过或者年近花甲的曾经叱咤荧屏的人物正在渐渐地逝去，如同那一抹灿丽的......情，从头劲爆到尾。</p>
             </li>			
             <li><img src="images/555.jpg"/></li>
 			<li>大众评分：<meter value="6" min="0" max="10" low="6" high="10" title="6分" optimum="10"></meter><br></li>
