--- a/1601141019/2zong/index.html
+++ b/1601141019/2zong/index.html
@@ -2,105 +2,114 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>心灵屋</title>
+<title>电影宣传</title>
 <style type="text/css">
-	a:link {
-		color: #000;
-		text-decoration: none;
+
+a:link {
+	color: #09F;
+	text-decoration: none;
+}
+a:visited {
+	text-decoration: none;
+	color: #09f;
+}
+a:hover {
+	text-decoration: none;
+	color: #fff;
+	background-color:#39C;
+	
+}
+a:active {
+	text-decoration: none;
+	color: #09f;
+}
+li{
+	list-style:none;
+	display:inline-block;}
+nav li{
+	margin-right:20px;
 	}
-	a:visited {
-		text-decoration: none;
+footer li{
+	margin-right:260px;}
+footer ul{
+	margin:0 auto;
+	text-align:center;
+	height:40px;
+	line-height:40px;
+	font-size:14px;
+
 	}
-	a:hover {
-		text-decoration: none;
-		cursor:pointer;
+nav ul{
+	margin:0 auto;
+	text-align:center;
+	height:40px;
+	line-height:40px;
+	background-color:#efefef;
+	
 	}
-	a:active {
-		text-decoration: none;
-		color:#000;
-	}
-	li{
-		list-style:none;
-	}
-	nav li{
-		display:inline-block;
-		margin-right:20px;
-		line-height:40px;
-		height:40px;
-	}
-	nav ul{
-		margin:0 auto;
-		background:#efefef;
-	}
-	footer p{
-		display:block;
-		float:left;
-	}
-	footer ul{
-		display:block;
-		float:right;	
-		color:#37a;
-	}
-	footer li{
-		display:inline-block;
-	}
+article{
+	background-color:#efefef;
+	width:800px;
+	margin:0 auto;}
+article li{
+	margin-right:30px;
+	}	
 </style>
 </head>
-<body>
-	<header>
-    	<h1 align="center">电影影评网</h1>
-    </header>
-    <nav align="center" style="width:70%;margin:0 auto;">
-      <ul>
-        <li><a href="#">影讯&购票 
-        </a></li>
-        <li><a href="#">选电影              </a></li>
-        <li><a href="#">电视剧</a></li>
-        <li><a href="#"> 排行榜              </a></li>
-        <li><a href="#">分类</a></li>
-        <li><a href="#"> 影评              </a></li>
-        <li><a href="#">2017年度榜单              </a></li>
-        <li><a href="#">2017观影报告</a></li>
-      </ul>
-    </nav>
-    <h1 style="width:70%;margin-left:17.5%;">美食大冒险之英雄烩(2018)</h1>
-    <ul style="width:35%;margin:0 15%;display:inline-block;float:left;">
-    	<li style="display:inline-block;margin-left:30px;"><img src="2素材/ying1.PNG"/></li>
-        <li style="display:inline-block;">
-        	<ul style="margin-left:0px;margin-top:0;font-size:15px;">
-            	<li>导演: 孙海鹏</li>
-<li>编剧: 孙海鹏 / 林惊雷 / 马华</li>
-<li>主演: 杨光普照 / 孟宇 / 张喆 / 郭政建</li>
-<li>类型: 动作 / 动画 / 冒险</li>
-<li>制片国家/地区: 中国大陆</li>
-<li>语言: 汉语普通话</li>
-<li>上映日期: 2018-08-17(中国大陆)</li>
-<li>片长: 98分钟</li>
-<li>又名: 美食大冒险 / Kungfood</li>
 
-            </ul>
-        </li>
-    </ul>
-    
-    <!--<ul style="width:35%;margin:0 15%;display:inline-block;float:right;">
-    	<li>豆瓣评分</li>
-    	<li>5星 <meter max="100" min="0" value="31.4%"></meter></li>
-    </ul>-->
-    
-    <hr />
-    <footer align="center" style="width:70%;margin:0 auto;font-size:14px;">
-   	  <p>
-        	© 2005－2018 douban.com, all rights reserved 北京豆网科技有限公司
-      </p>
-      <ul>
-        <li><a href="#">关于豆瓣 </a></li>
-        <li><a href="#">在豆瓣工作 </a></li>
-        <li><a href="#">联系我们 </a></li>
-        <li><a href="#">免责声明 </a></li>
-        <li><a href="#">帮助中心 </a></li>
-        <li><a href="#">移动应用 </a></li>
-        <li><a href="#">豆瓣广告 </a></li>
-      </ul>
-    </footer>
+<body>
+<header><h1 align="center">电影影评网</h1></header>
+<nav>
+  <ul>
+  <li><a href="#">影讯&amp;购票&nbsp;</a></li>
+    <li><a href="#">
+      选电影&nbsp;</a></li>
+    <li><a href="#">
+      电视剧&nbsp;</a></li>
+    <li><a href="#">
+      排行榜&nbsp;</a></li>
+    <li><a href="#">
+      分类&nbsp;</a></li>
+    <li><a href="#">
+      影评&nbsp;</a></li>
+    <li><a href="#">
+      2017年度榜单</a></li>
+    <li><a href="#">
+      2017观影报告 </a></li>
+  </ul>
+</nav>
+<article>
+<section>
+<h2>美食大冒险之英雄烩（2018）</h2>
+<ul>
+<li><p><img src="2素材/ying1.PNG" width="138" height="190" /></p></li>
+<li><p>导演: 孙海鹏 <br />
+  编剧: 孙海鹏 / 林惊雷 / 马华 <br />
+  主演: 杨光普照 / 孟宇 / 张喆 / 郭政建 <br />
+  类型: 动作 / 动画 / 冒险 <br />
+  制片国家/地区: 中国大陆 <br />
+  语言: 汉语普通话 <br />T
+  上映日期: 2018-08-17(中国大陆)<br />
+  片长: 98分钟 <br />
+  又名: 美食大冒险 / Kungfood</p></li>
+<li><p>豆瓣评分   7.7<br />
+  <a href="#">1772人评价</a><br />
+  5星<progress value="31.4" max="100"></progress> 31.4%  <br />
+  4星<progress value="29.9" max="100"></progress> 29.9%  <br />
+  3星<progress value="31.4" max="100"></progress>31.4%  <br />
+  2星<progress value="6.6" max="100"></progress>6.6%  <br />
+  1星<progress value="0.7" max="100"></progress>0.7%  <br />
+  好于&nbsp;<a href="#">55% 动画片</a><br />
+  好于&nbsp;<a href="#">73% 冒险片 </a></p></li>
+  </ul>
+  </section>
+</article>
+<footer>
+<hr />
+  <ul>
+    <li>© 2005－2018 douban.com, all rights reserved 北京豆网科技有限公司 </li>
+    <li>关于豆瓣 • 在豆瓣工作 • 联系我们 • 免责声明 • 帮助中心 • 移动应用 • 豆瓣广告 </li>
+  </ul>
+</footer>
 </body>
 </html>
