--- a/1601141019/3/2017-10-24-2.html
+++ b/1601141019/3/2017-10-24-2.html
@@ -13,8 +13,8 @@
     <p align="center" class="one"><em class="blue">2015年4月15日 11:08</em><em class="blue">传智播客网</em><em class="gray">我有话说(<em id="num">802</em>人参与)</em></p>
     <hr/>
     
-    <p class="two">2015年全国高校IT骨干教师暑期培训班将于7月在京举办</p>
-    <p class="three">传智播客网4月15日消息 本次培训课程已纳入“国家信息技术紧缺人才培养工程（ NITE）”课程体系，由中国电子学会将携手CSDN（CSIP）[微博]主办，由传智播客教育集团[微博]承办的全国骨干教师师资培训（软件开发与应用）。本次培训于2015年7月14日到25日举办，课程涵盖：JavaEE、.NET、PHP、网页平面设计、iOS、C++六个方向。传智播客[微博]还将为校企之间、校校之间提供交流分享专业建设与教学改革的理念、经验与成果的平台。</p>
+    <p class="two" style="font-family:'微软雅黑'">2015年全国高校IT骨干教师暑期培训班将于7月在京举办</p>
+    <p class="three"><span style="color:#900">传智播客网4月15日消息</span> 本次培训课程已纳入“国家信息技术紧缺人才培养工程（ NITE）”课程体系，由中国电子学会将携手CSDN（CSIP）[<span style="color:#09C;">微博</span>]主办，由传智播客教育集团[<span style="color:#09C;">微博</span>]承办的全国骨干教师师资培训（软件开发与应用）。本次培训于2015年7月14日到25日举办，课程涵盖：<strong style="color:#F00">JavaEE、.NET、PHP、网页平面设计、iOS、C++</strong>六个方向。传智播客[<span style="color:#09C;">微博</span>]还将为校企之间、校校之间提供交流分享专业建设与教学改革的理念、经验与成果的平台。</p>
 
 </body>
 </html>
